<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_order"
        android:icon="@drawable/orderform_icon"
        android:title="@string/navi_i1"/>
    <item
        android:id="@+id/menu_fuel_up"
        android:icon="@drawable/fuelup_icon"
        android:title="@string/navi_i2"/>
    <item
        android:id="@+id/menu_wallet"
        android:icon="@drawable/wallet_icon"
        android:title="@string/navi_i3"/>
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/set_icon"
        android:title="@string/navi_i4"/>
    <item android:title=""/>
    <item android:title=""/>
    <item android:title=""/>
    <item
        android:id="@+id/menu_phone"
        android:title="@string/navi_email"/>
    <item android:title="@string/navi_bottom_word"/>
</menu>
